# cookiecutter-python-poetry-template

./: CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  tutorial.md
docs/features/: black.md  devcontainer.md  docker.md  makefile.md  poetry.md  scripts.md  tbump.md  tox.md
tests/: __init__.py  test_cookiecutter.py  utils.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: main.yml  on-release-main.yml
{{cookiecutter.project_name}}/scripts/: generate_docs.py  myscript.py  tbump.sh
