[tool.poetry]
name = "cookiecutter-python-poetry-template"
version = "0.1.0"
description = "Cookiecutter template for Python projects using Poetry"
authors = ["Florian Maas <fpgmaas@gmail.com>"]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'poetry']
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
packages = []

[tool.poetry.urls]
Repository = "https://github.com/apajon/cookiecutter-python-poetry-template"
Documentation = "https://apajon.github.io/cookiecutter-python-poetry-template/"
Homepage = "https://apajon.github.io/cookiecutter-python-poetry-template/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cookiecutter = ">=2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["tests"]

[tool.mypy]
files = ['tests']
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_any_unimported = false

[tool.deptry]
extend_exclude = [
  ".+/test_foo.py"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["cookiecutter"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pre-commit = ">=2.20.0"
pytest-cookies = ">=0.6.1"
tox = ">=4.0.0"
deptry = ">=0.23.0"
mypy = ">=0.991"
pytest-cov = ">=4.0.0"
ruff = ">=0.11.5"
mkdocs = ">=1.4.2"
mkdocs-material = ">=8.5.10"
mkdocstrings = {extras = ["python"], version = ">=0.19.0"}
