[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
readme = "README.md"
keywords = ["python"]
{% if cookiecutter.layout == "src" -%}
packages = [{include = "{{cookiecutter.project_slug}}", from = "src"}]
{%- else -%}
packages = [{include = "{{cookiecutter.project_slug}}"}]
{%- endif %}

[tool.poetry.urls]
Homepage = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pre-commit = ">=2.20.0"
black = ">=23.0.0"
tbump = ">=6.9.0"
{% if cookiecutter.deptry == 'y' %}deptry = ">=0.23.0"{% endif %}
{% if cookiecutter.type_checker == "mypy" -%}
mypy = ">=0.991"
{%- elif cookiecutter.type_checker == "ty" -%}
ty = ">=0.0.1a16"
{%- endif %}
{% if cookiecutter.codecov == 'y' %}pytest-cov = ">=4.0.0"{% endif %}
ruff = ">=0.11.5"
{% if cookiecutter.mkdocs == 'y' %}mkdocs = ">=1.4.2"
mkdocs-material = ">=8.5.10"
mkdocstrings = {extras = ["python"], version = ">=0.26.1"}{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

{% if cookiecutter.type_checker == "mypy" -%}
[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = false
disallow_untyped_defs = false
files = [
    {%- if cookiecutter.layout == "src" -%}
    "src"
    {%- else -%}
    "{{cookiecutter.project_slug}}"
    {%- endif -%}
]
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
{%- else -%}
[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
{%- endif %}

[tool.black]
line-length = 120
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.tbump]
# tbump configuration for automated version bumping
github_url = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"

[tool.tbump.version]
current = "0.0.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.after_push]]
name = "git push tags"
cmd = "git push --follow-tags"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

{% if cookiecutter.codecov == "y" -%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    {%- if cookiecutter.layout == "src" -%}
    "src"
    {%- else -%}
    "{{cookiecutter.project_slug}}"
    {%- endif -%}
]
{% endif %}
